ethstats-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ethstats
  labels:
    app: ethstats
spec:
  selector:
    app: ethstats
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
