geth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth
spec:
  selector:
    app: geth
  type: NodePort
  ports:
  - name: rpc
    port: 8545
